[gd_scene load_steps=6 format=2]

[ext_resource path="res://rythm_game/rhythm_game.tscn" type="PackedScene" id=1]
[ext_resource path="res://rythm_game/RhythmGameMultiplayer.gd" type="Script" id=2]
[ext_resource path="res://rythm_game/MultiplayerScoreboard.gd" type="Script" id=3]
[ext_resource path="res://fonts/SongLabel.tres" type="DynamicFont" id=8]
[ext_resource path="res://styles/PanelStyleTransparent.tres" type="StyleBox" id=9]

[node name="RhythmGameMultiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RhythmGame" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerScoreboard" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPLoadingLabel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MPLoadingLabel"]
anchor_left = 0.33
anchor_right = 0.67
anchor_bottom = 1.0
margin_left = -0.400024
custom_fonts/font = ExtResource( 8 )
text = "Waiting for other players to load!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
